--- a/src/pages/home/hero/Hero.css
+++ b/src/pages/home/hero/Hero.css
@@ -2,7 +2,7 @@
   background-image: url("../../../../public/images/bg.webp");
   background-size: cover;
   background-attachment: fixed;
-  position: absolute;
+  /* position: absolute; */
   top: 0;
   left: 0;
   z-index: -1;
@@ -11,6 +11,7 @@
   padding-top: 20%;
   padding-right: 50px;
   color: #fff;
+  /* margin-bottom: 300px; */
 }
 .hero #heading h3 {
   color: #fff;
