--- a/src/pages/home/hero/Hero.css
+++ b/src/pages/home/hero/Hero.css
@@ -1,17 +1,14 @@
 .hero {
-  background-image: url("../../../../public/images/bg.webp");
+  background-image: url("/images/bg.webp");
   background-size: cover;
   background-attachment: fixed;
-  /* position: absolute; */
-  top: 0;
-  left: 0;
+
   z-index: -1;
   width: 100%;
   height: 100vh;
   padding-top: 20%;
   padding-right: 50px;
   color: #fff;
-  /* margin-bottom: 300px; */
 }
 .hero #heading h3 {
   color: #fff;
