--- a/src/pages/home/hero/Hero.css
+++ b/src/pages/home/hero/Hero.css
@@ -2,8 +2,7 @@
   background-image: url("/images/bg.webp");
   background-size: cover;
   background-attachment: fixed;
-
-  z-index: -1;
+  /* z-index: -1; */
   width: 100%;
   height: 100vh;
   padding-top: 20%;
