--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,7 +25,7 @@ body {
 .icon {
   width: 40px;
   height: 40px;
-  line-height: 40px;
+  /* line-height: 40px; */
   border-radius: 50%;
   text-align: center;
   background-color: rgba(255, 255, 255, 0.3);
