--- a/src/pages/hero/Hero.css
+++ b/src/pages/hero/Hero.css
@@ -1,7 +1,11 @@
-.hero {
+.bg {
   background-image: url("/images/bg.webp");
   background-size: cover;
   background-attachment: fixed;
+}
+
+.hero {
+
   /* z-index: -1; */
   width: 100%;
   height: 100vh;
@@ -9,23 +13,28 @@
   padding-right: 50px;
   color: #fff;
 }
+
 .hero #heading h3 {
   color: #fff;
 }
+
 .hero #heading {
   text-align: left;
   margin: 0;
   padding: 0;
 }
+
 @media screen and (max-width: 768px) {
   .margin {
     height: 40vh;
   }
+
   .hero {
     background-position: right;
     padding-top: 50%;
     height: 80vh;
   }
+
   .hero .row {
     width: 100%;
   }
